--- a/src/main/resources/estilos/estilos.css
+++ b/src/main/resources/estilos/estilos.css
@@ -1,7 +1,7 @@
 
 
 .root{
-    -fx-background-image: url("https://images6.alphacoders.com/118/1188882.jpg"), url("https://celaya.tecnm.mx/wp-content/uploads/2021/02/cropped-FAV.png");
+    -fx-background-image: url("https://images6.alphacoders.com/118/1188882.jpg"), url("https://i0.wp.com/celaya.tecnm.mx/wp-content/uploads/2021/11/LOGO-LINCE-ITC-01.png?resize=1080%2C1042&ssl=1");
     -fx-background-repeat: no-repeat, no-repeat;
     -fx-background-size: 100%, 200px;
     -fx-background-position: center, left top;
